<resources>
    <string name="app_name">Підготовка до ЗНО</string>
    <string name="reg_title">Реєстрація</string>
    <string name="avtorization_title">Авторизація</string>
    <string name="reg_name">Ім`я</string>
    <string name="reg_mail">Пошта</string>
    <string name="reg_password">Пароль</string>
    <string name="reg_re_password">Повторіть пароль</string>
    <string name="reg_add">Зареєструватися</string>
    <string name="reg_add_teacher">Зареэструватися як вчитель</string>
    <string name="avt_confirm">Увійти</string>
    <string name="avt_email">Пошта</string>
    <string name="avt_password">Пароль</string>
    <string name="avt_reg_title">Зареєструватися як студент</string>
    <string name="avt_reg_lastName">Прізвище</string>
    <string name="avt_reg_Ot">По батькові</string>
    <string name="avt_reg_Group">Група</string>
    <string name="title_activity_zno">Zno</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="prName">Ім`я</string>
    <string name="prFname">По батькові</string>
    <string name="prLast">Прізвище</string>
    <string name="prGroup">Група</string>
    <string name="prChange">Змінити Пароль</string>
    <string name="prSave">Зберігти</string>
    <string name="prCancel">Відмінити</string>
    <string name="List_Search">Пошук</string>
    <string name="List_sort_by">Фільтрувати за:</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="header_add_test">Створення тесту</string>
    <string name="textView_add_name">Введіть назву тесту</string>
    <string name="textView_add_theme">Виберіть тему тетсу</string>
    <string name="textView_add_text_question">Введіть завдання</string>
    <string name="textView_variants">Варіанти відповідей</string>
    <string name="btn_add_variant">Додати відповідь</string>
    <string name="Add_type_test">Тип тесту:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>


