<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".activity.user.Profile">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        app:srcCompat="@mipmap/standart_profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prFname"
            android:textColor="@color/White" />

        <EditText
            android:id="@+id/edFname"
            android:layout_width="wrap_content"
            android:layout_weight="20"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:textColor="@color/White"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/prName" />

        <EditText
            android:id="@+id/edName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:textColor="@color/White"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/prLast" />

        <EditText
            android:id="@+id/edLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:textColor="@color/White"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/prGroup" />

        <TextView
            android:id="@+id/tvGroup"
            android:layout_width="wrap_content"
            android:textColor="@color/White"
            android:layout_weight="7"
            android:layout_height="wrap_content"
           />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prChange"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/pr_save_btn"
            android:layout_width="wrap_content"
            android:background="@drawable/batton"
            android:textColor="@color/White"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prSave" />

        <Button
            android:id="@+id/pr_cancel_btn"
            android:layout_width="wrap_content"
            android:background="@drawable/batton"
            android:textColor="@color/White"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prCancel" />

        <ProgressBar
            android:id="@+id/Timer"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="25sp"
        android:layout_height="wrap_content"
        android:text="Результати" />

    <ListView
        android:id="@+id/ProfileResultList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>