<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.admin.TeachrStudentStatistic">

    <ImageView
        android:id="@+id/studImageProfile"
        android:layout_width="match_parent"
        android:layout_height="123dp"
        app:srcCompat="@mipmap/standart_profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:textColor="@color/White"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prFname" />

        <TextView
            android:id="@+id/tvFname"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/White" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/t"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prName" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/White" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:layout_weight="1"
            android:text="@string/prLast" />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/White" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:textColor="@color/White"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prGroup" />

        <TextView
            android:id="@+id/tvGroup"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/White" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:textAlignment="center"
            android:textSize="@android:dimen/app_icon_size"
            android:layout_weight="1"
            android:text="Результати" />

    </LinearLayout>

    <ListView
        android:id="@+id/ProfileResultListToTeacher"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>